chore: use `SequencedCollection#getFirst` where it makes sense