@@ -13,7 +13,7 @@ class UtilsTest {
         final List<String> result = Utils.split("hello", ",").toList();
 
         assertEquals(1, result.size());
-        assertEquals("hello", result.get(0));
+        assertEquals("hello", result.getFirst());
     }
 
     @Test
@@ -60,7 +60,7 @@ class UtilsTest {
         final List<QueryParam> result = Utils.parseQuery("key").toList();
 
         assertEquals(1, result.size());
-        assertEquals(new QueryParam.QueryParamWithoutValue("key"), result.get(0));
+        assertEquals(new QueryParam.QueryParamWithoutValue("key"), result.getFirst());
     }
 
     @Test
@@ -68,7 +68,7 @@ class UtilsTest {
         final List<QueryParam> result = Utils.parseQuery("key=value").toList();
 
         assertEquals(1, result.size());
-        assertEquals(new QueryParam.QueryParamWithValue("key", "value"), result.get(0));
+        assertEquals(new QueryParam.QueryParamWithValue("key", "value"), result.getFirst());
     }
 
     @Test
@@ -76,7 +76,7 @@ class UtilsTest {
         final List<QueryParam> result = Utils.parseQuery("hello%20world=world%20hello").toList();
 
         assertEquals(1, result.size());
-        assertEquals(new QueryParam.QueryParamWithValue("hello world", "world hello"), result.get(0));
+        assertEquals(new QueryParam.QueryParamWithValue("hello world", "world hello"), result.getFirst());
     }
 
     @Test
@@ -93,7 +93,7 @@ class UtilsTest {
         final List<QueryParam> result = Utils.parseQuery("sdd.%2C%2Fs%28%265dsad%3D%7D%3D%22sd%5C%5Cds=_-%26%3D%24%3Faaalele%7C%7Ba%7D").toList();
 
         assertEquals(1, result.size());
-        assertEquals(new QueryParam.QueryParamWithValue("sdd.,/s(&5dsad=}=\"sd\\\\ds", "_-&=$?aaalele|{a}"), result.get(0));
+        assertEquals(new QueryParam.QueryParamWithValue("sdd.,/s(&5dsad=}=\"sd\\\\ds", "_-&=$?aaalele|{a}"), result.getFirst());
     }
 
     @Test
